force-app/main/default/objects/Voice_Tagging__c/Voice_Tagging__c.object-meta.xml
<CustomObject>
    <label>Voice Tagging</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Voice Tagging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voice Tagging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>