force-app/main/default/objects/Voice_Tagging__c/fields/Audio_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Audio_End_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Audio End Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>