force-app/main/default/objects/Voice_Tagging__c/fields/Audio_Module_Num__c.field-meta.xml
<CustomField>
    <fullName>Audio_Module_Num__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Audio Module Num</label>
    <length>50</length>
    <type>Text</type>
</CustomField>