force-app/main/default/objects/Voice_Tagging__c/fields/Call_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Log ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>