force-app/main/default/objects/Voice_Tagging__c/fields/Import_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Import_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Import Datetime</label>
    <type>DateTime</type>
</CustomField>