force-app/main/default/objects/Voice_Tagging__c/fields/Import_Result__c.field-meta.xml
<CustomField>
    <fullName>Import_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Result</label>
    <type>Checkbox</type>
</CustomField>