force-app/main/default/objects/Voice_Tagging__c/fields/Import_Type__c.field-meta.xml
<CustomField>
    <fullName>Import_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Import Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>