force-app/main/default/objects/Voice_Tagging__c/fields/Private_Data__c.field-meta.xml
<CustomField>
    <fullName>Private_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Private Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>