force-app/main/default/objects/Voice_Tagging__c/fields/Transaction_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Group_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Group Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>