force-app/main/default/objects/Voice_Tagging__c/fields/Verint_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Verint_Call_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verint Call ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>