force-app/main/default/objects/Voice_Tagging__c/listViews/All_Inbound.listView-meta.xml
<ListView>
    <fullName>All_Inbound</fullName>
    <columns>Call_Log_ID__c</columns>
    <columns>Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>Extension__c</columns>
    <columns>Import_Result__c</columns>
    <columns>Import_Datetime__c</columns>
    <columns>Import_Type__c</columns>
    <columns>Verint_Call_ID__c</columns>
    <columns>Unique_Id__c</columns>
    <columns>Transaction_Group_Id__c</columns>
    <columns>NAME</columns>
    <columns>Private_Data__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <label>All Inbound</label>
</ListView>